# automatic-differentiation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  ad.hh  error_propagation.cc  main.cc  make_function.sh  multi_dimensional.cc  one_dimensional.cc  readme.md  test.cc  to_string.cc  to_string.hh
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  error_propagation.cc  find_root.cc  gradient.cc  multi_dimensional.cc  one_dimensional.cc  ostream.cc  to_string.cc
include/ad/: ad.hh  gradient.hh  ostream.hh  to_string.hh
tests/: CMakeLists.txt  test.cc
